// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should active SortOptions component render correctly 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
  onClick={[Function]}
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    tabIndex="0"
  >
    Price: low to high
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom places__options--opened"
  >
    <li
      className="places__option "
      onClick={[Function]}
      tabIndex={0}
    >
      Popular
    </li>
    <li
      className="places__option places__option--active"
      onClick={[Function]}
      tabIndex={1}
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      onClick={[Function]}
      tabIndex={2}
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      onClick={[Function]}
      tabIndex={3}
    >
      Top rated first
    </li>
  </ul>
</form>
`;

exports[`Should non active SortOptions component render correctly 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
  onClick={[Function]}
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    tabIndex="0"
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom "
  >
    <li
      className="places__option places__option--active"
      onClick={[Function]}
      tabIndex={0}
    >
      Popular
    </li>
    <li
      className="places__option "
      onClick={[Function]}
      tabIndex={1}
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      onClick={[Function]}
      tabIndex={2}
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      onClick={[Function]}
      tabIndex={3}
    >
      Top rated first
    </li>
  </ul>
</form>
`;
